Fix date picker visibility

--- a/www/css/style.scss
+++ b/www/css/style.scss
@@ -81,6 +81,10 @@ div.flexible {
   }
 }
 
+.picker__frame {
+  top: 1%;
+}
+
 .collection-item {
   .announcement {
     word-break: break-all;
